Update nav on mobile, fix project items

--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,10 @@
     .vert-navbar {
         background-color: #fcedea;
         position: fixed;
+        z-index: 1;
+        margin-top: auto;
         width: 100%;
         height: 5rem;
-        margin-top: auto;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -110,28 +111,22 @@
 }
 
 @media (max-width: 510px) {
-    .vert-navbar {
-        background-color: #fcedea;
-        position: fixed;
-        width: 100%;
-        height: 7rem;
-        margin-top: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    .vert-navbar ul li {
         font-size: 0.9em;
-        padding: 1rem 0;
     }
-    .vert-navbar ul {
-        width: auto;
-        margin: auto;
-        padding: 2rem 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        list-style: none;
-        padding: 0;
+    .nav-icon {
+        margin-right: 0.1rem;
+    }
+}
+@media (max-width: 375px) {
+    .vert-navbar ul li {
+        font-size: 1em;
+    }
+    .vert-navbar ul li span {
+        display: none;
+    }
+    .nav-icon {
+        margin: 0 0.3rem;
     }
 }
 
@@ -200,8 +195,9 @@
     background-position: contain;
     min-height: 500px;
 }
-.projects-wrapper.container {
+.projects-wrapper .container {
     width: 100%;
+    margin: auto;
 }
 @media (min-width: 768px) {
     .projects-wrapper {
@@ -214,6 +210,7 @@
         margin-left: 20%;
     }
 }
+
 .project-item {
     max-width: 600px;
     height: 350px;
@@ -352,6 +349,6 @@ footer {
 }
 @media (max-width: 510px) {
     footer {
-        margin-bottom: 7rem;
+        margin-bottom: 5rem;
     }
 }
